--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/next-auth": "^3.13.0",
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
